JS COMPONENT ADDED

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
 		<title>Alien Gear</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script type="text/javascript" src="coupon.js"></script>  
 	
 
 	</head>
@@ -20,7 +21,7 @@
 		</div>
 		
 		<main>
-		<h1><u>Products</u></h1>
+		<h2><u>Products</u></h2>
 		
 		
 		<div>
@@ -33,6 +34,8 @@
 		
 		<pre class="info">   SMART SPEAKER 			     Robot				      Dog</pre>
 		<pre class="info">   	R1499 			     	     R8999			 	     R9999</pre>
+
+		<input  type="coupon" value="Get 10% off NOW!" onclick="coup()"/>  
 		
 		<br>
 		<br>
