--- a/sent.html
+++ b/sent.html
@@ -29,4 +29,7 @@
 		<a href="index.html"><u> Back to Home</u></a>
 		
 		</main>
+		<footer class="webfoot">
+			<p>Alien Gear 2021</p>
+			</footer>
 	</body>
