Moved images to a folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	  	<main>
 		
 			<section class="header">
-		<img  src="robot.png" alt="ComHeader" style="width:100%">	
+		<img  src="/images/robot.png" alt="ComHeader" style="width:100%">	
 			
 		<h3>Alien Gear sells mordern technology at unbeatable low prices. </h3>
 	  </section>
