--- a/products.html
+++ b/products.html
@@ -25,11 +25,11 @@
 		
 		
 		<div>
-			<img src="pic1.jpg" alt="mini" >
+			<img src="/images/pic1.jpg" alt="mini" >
 			
-			<img src="pic2.jpg" alt="Robot" >
+			<img src="/images/pic2.jpg" alt="Robot" >
 
-			<img src="pic3.jpg" alt="dog">
+			<img src="/images/pic3.jpg" alt="dog">
 		</div>
 		
 		<pre class="info">   SMART SPEAKER 			     Robot				      Dog</pre>
